// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating Variants Counter Variant should render with counter variant 1`] = `
<View
  label="placeholder"
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
  testID="ds-rating"
  variant="counter"
>
  <View
    label="placeholder"
    style={
      Array [
        Object {
          "flexDirection": "row",
          "marginHorizontal": 0,
        },
      ]
    }
    testID="ds-rating-content"
    variant="counter"
  >
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 50,
        }
      }
      testID="ds-rating-1-button"
    >
      <Text
        accessibilityRole="imagebutton"
        name="filled-action-rating"
        size="semi"
        style={
          Object {
            "color": "#F8B546",
          }
        }
        testID="ds-rating-1-icon"
      >
        filled-action-rating
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#737373",
          "fontFamily": "Roboto",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0.22,
          "lineHeight": 21,
        },
      ]
    }
    testID="ds-rating-label"
    variant="counter"
  >
    placeholder
  </Text>
</View>
`;

exports[`Rating Variants Input Variant should render with input variant 1`] = `
<View
  label="placeholder"
  onPress={[Function]}
  style={
    Array [
      Object {
        "flexDirection": "column",
      },
    ]
  }
  testID="ds-rating"
  variant="input"
>
  <View
    label="placeholder"
    onPress={[Function]}
    style={
      Array [
        Object {
          "flexDirection": "row",
          "marginHorizontal": 0,
        },
      ]
    }
    testID="ds-rating-content"
    variant="input"
  >
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 50,
        }
      }
      testID="ds-rating-1-button"
    >
      <Text
        accessibilityRole="imagebutton"
        name="outlined-action-rating"
        size="semi"
        style={
          Object {
            "color": "#737373",
          }
        }
        testID="ds-rating-1-icon"
      >
        outlined-action-rating
      </Text>
    </View>
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 50,
        }
      }
      testID="ds-rating-2-button"
    >
      <Text
        accessibilityRole="imagebutton"
        name="outlined-action-rating"
        size="semi"
        style={
          Object {
            "color": "#737373",
          }
        }
        testID="ds-rating-2-icon"
      >
        outlined-action-rating
      </Text>
    </View>
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 50,
        }
      }
      testID="ds-rating-3-button"
    >
      <Text
        accessibilityRole="imagebutton"
        name="outlined-action-rating"
        size="semi"
        style={
          Object {
            "color": "#737373",
          }
        }
        testID="ds-rating-3-icon"
      >
        outlined-action-rating
      </Text>
    </View>
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 50,
        }
      }
      testID="ds-rating-4-button"
    >
      <Text
        accessibilityRole="imagebutton"
        name="outlined-action-rating"
        size="semi"
        style={
          Object {
            "color": "#737373",
          }
        }
        testID="ds-rating-4-icon"
      >
        outlined-action-rating
      </Text>
    </View>
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 50,
        }
      }
      testID="ds-rating-5-button"
    >
      <Text
        accessibilityRole="imagebutton"
        name="outlined-action-rating"
        size="semi"
        style={
          Object {
            "color": "#737373",
          }
        }
        testID="ds-rating-5-icon"
      >
        outlined-action-rating
      </Text>
    </View>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#737373",
          "fontFamily": "Roboto",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0.38,
          "lineHeight": 18,
          "marginTop": 4,
        },
      ]
    }
    testID="ds-rating-label"
    variant="input"
  >
    placeholder
  </Text>
</View>
`;

exports[`Rating Variants RatingBase component should render a base component with medium size 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "borderRadius": 50,
    }
  }
  testID="undefined-button"
>
  <Text
    accessibilityRole="imagebutton"
    name="filled-action-rating"
    size="medium"
    style={
      Object {
        "color": "#F8B546",
      }
    }
    testID="undefined-icon"
  >
    filled-action-rating
  </Text>
</View>
`;

exports[`Rating Variants ReadOnly Variant should render with read-only variant 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
      },
    ]
  }
  testID="ds-rating"
  variant="read-only"
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "marginHorizontal": 0,
        },
      ]
    }
    testID="ds-rating-content"
    variant="read-only"
  >
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 50,
        }
      }
      testID="ds-rating-1-button"
    >
      <Text
        accessibilityRole="imagebutton"
        name="filled-action-rating"
        size="semi"
        style={
          Object {
            "color": "#737373",
          }
        }
        testID="ds-rating-1-icon"
      >
        filled-action-rating
      </Text>
    </View>
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 50,
        }
      }
      testID="ds-rating-2-button"
    >
      <Text
        accessibilityRole="imagebutton"
        name="filled-action-rating"
        size="semi"
        style={
          Object {
            "color": "#737373",
          }
        }
        testID="ds-rating-2-icon"
      >
        filled-action-rating
      </Text>
    </View>
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 50,
        }
      }
      testID="ds-rating-3-button"
    >
      <Text
        accessibilityRole="imagebutton"
        name="filled-action-rating"
        size="semi"
        style={
          Object {
            "color": "#737373",
          }
        }
        testID="ds-rating-3-icon"
      >
        filled-action-rating
      </Text>
    </View>
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 50,
        }
      }
      testID="ds-rating-4-button"
    >
      <Text
        accessibilityRole="imagebutton"
        name="filled-action-rating"
        size="semi"
        style={
          Object {
            "color": "#737373",
          }
        }
        testID="ds-rating-4-icon"
      >
        filled-action-rating
      </Text>
    </View>
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderRadius": 50,
        }
      }
      testID="ds-rating-5-button"
    >
      <Text
        accessibilityRole="imagebutton"
        name="filled-action-rating"
        size="semi"
        style={
          Object {
            "color": "#737373",
          }
        }
        testID="ds-rating-5-icon"
      >
        filled-action-rating
      </Text>
    </View>
  </View>
</View>
`;
